--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^4.5.0",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "@types/react-dom": "^18.0.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
