--- a/.env.exemplo
+++ b/.env.exemplo
@@ -1,5 +1,9 @@
+MONGODB_URL = 
+MONGODB_DATABASE = 
+MONGODB_COLECAO_CONTAS = 
+
 NEXTAUTH_URL = 
 AUTH0_CLIENT_ID = 
 AUTH0_CLIENT_SECRET = 
 AUTH0_ISSUER = https://
-NEXTAUTH_SECRET = 
+NEXTAUTH_SECRET = # openssl rand -base64 32
