mudança de variavel

--- a/.env.local.exemplo
+++ b/.env.local.exemplo
@@ -1,6 +1,6 @@
 MONGODB_URL = 
 MONGODB_DATABASE = 
-MONGODB_COLECAO_CONTAS = 
+MONGODB_COLECAO_PERFILAUTH0 = 
 
 NEXTAUTH_URL = 
 AUTH0_CLIENT_ID = 
