alteração na variavel de ambiente

--- a/.env.local.exemplo
+++ b/.env.local.exemplo
@@ -1,6 +1,7 @@
 MONGODB_URL = 
 MONGODB_DATABASE = 
-MONGODB_COLECAO_PERFILAUTH0 = 
+MONGODB_COLECAO_PROFILEAUTH0 = 
+MONGODB_COLECAO_PERFIL = 
 
 NEXTAUTH_URL = 
 AUTH0_CLIENT_ID = 
