--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
