variavel de ambiente coleção para produtos

--- a/.env.local.exemplo
+++ b/.env.local.exemplo
@@ -2,6 +2,7 @@ MONGODB_URL =
 MONGODB_DATABASE = 
 MONGODB_COLLECTION_PROFILE = 
 MONGODB_COLLECTION_PERFIL = 
+MONGODB_COLLECTION_PRODUTO = 
 
 NEXTAUTH_URL = 
 AUTH0_CLIENT_ID = 
