--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "mongodb": "^4.5.0",
+    "multer": "^1.4.4",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
@@ -17,6 +18,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.30",
