--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^4.5.0",
     "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
