--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
+    "@types/multer-gridfs-storage": "^4.0.5",
     "@types/next": "^9.0.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.30",
