Variavel de ambiente coleção tranasação

--- a/.env.local.exemplo
+++ b/.env.local.exemplo
@@ -4,6 +4,7 @@ MONGODB_COLLECTION_PROFILE =
 MONGODB_COLLECTION_PERFIL =
 MONGODB_COLLECTION_PRODUTO = 
 MONGODB_COLLECTION_IMG_BUCKET =  
+MONGODB_COLLECTION_TRANSACAO = 
 
 NEXTAUTH_URL =
 AUTH0_CLIENT_ID = 
